// Copyright 2022 Strims contributors
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package strims.vnic.v1;

option go_package = "github.com/MemeLabs/strims/pkg/apis/vnic/v1;vnicv1";
option java_package = "gg.strims.vnic.v1";
option swift_prefix = "SVN";

import "vnic/v1/vnic.proto";

message ConfigChangeEvent {
  Config config = 1;
}
